# mastermind-solver

./: .gitignore  README.md  ideas.txt  pyproject.toml
src/: mastermind.py  solver.py
tests/: test_mastermind.py  test_solver.py
tmp/: model_1.lp  model_2.lp  model_3.lp  model_4.lp  model_5.lp  model_6.lp  model_7.lp
